--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,14 @@
-<div class="my-google-map">
-  <google-map></google-map>
+<header>
+  <h2>Map History</h2>
+</header>
+<div class="container">
+  <div class="information">
+    <h3>Filtre</h3>
+  </div>
+  <div id="map"class="my-google-map">
+    <google-map [width]="1000" [height]="600"[options]="mapOptions"></google-map>
+  </div>
+  <div class="information">
+    <h3>Informations</h3>
+  </div>
 </div>
