--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,26 @@
-/* You can add global styles to this file, and also import other style files */
+@font-face {
+    font-family: "Quantico";
+    src: local("Quatico"), url(./assets/fonts/Quantico-Regular.ttf) format("truetype");
+}
+
+body {
+    background-color: #F5F5F5;
+}
+footer {
+    display:flex;
+    margin-top: 4%;
+    width:100%;
+    height:5%;
+    color: black;
+    bottom:0;
+    text-align: center;
+    justify-content: center;
+    width: 100%;
+}
+
+footer p {
+    width: 30%;
+    margin-top: auto;
+    margin-bottom: auto;
+    border: solid 2px black;
+}
