--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -11,6 +11,13 @@
       <map-polygon [options]="polyAndore"></map-polygon>
       <map-polygon [options]="polyEspagne"></map-polygon>
       <map-polygon [options]="polyPortugal"></map-polygon>
+      <map-polygon [options]="polyAngleterre"></map-polygon>
+      <map-polygon [options]="polyPaysdeGalle"></map-polygon>
+      <map-polygon [options]="polyEcosse"></map-polygon>
+      <map-polygon [options]="polyIrlandeNord"></map-polygon>
+      <map-polygon [options]="polyIrlande"></map-polygon>
+      <map-polygon [options]="polyIslande"></map-polygon>
+      <map-polygon [options]="polyItalie"></map-polygon>
     </google-map>
   </div>
   <div class="information">
