--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -18,6 +18,10 @@
       <map-polygon [options]="polyIrlande"></map-polygon>
       <map-polygon [options]="polyIslande"></map-polygon>
       <map-polygon [options]="polyItalie"></map-polygon>
+      <map-polygon [options]="polyLuxembourg"></map-polygon>
+      <map-polygon [options]="polyBelgique"></map-polygon>
+      <map-polygon [options]="polySuisse"></map-polygon>
+      <map-polygon [options]="polyAllemagne"></map-polygon>
     </google-map>
   </div>
   <div class="information">
