--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,21 +7,9 @@
   </div>
   <div id="map"class="my-google-map">
     <google-map [width]="1000" [height]="600" [options]="mapOptions" polyOptions>
-      <map-polygon [options]="polyFrance"></map-polygon>
-      <map-polygon [options]="polyAndore"></map-polygon>
-      <map-polygon [options]="polyEspagne"></map-polygon>
-      <map-polygon [options]="polyPortugal"></map-polygon>
-      <map-polygon [options]="polyAngleterre"></map-polygon>
-      <map-polygon [options]="polyPaysdeGalle"></map-polygon>
-      <map-polygon [options]="polyEcosse"></map-polygon>
-      <map-polygon [options]="polyIrlandeNord"></map-polygon>
-      <map-polygon [options]="polyIrlande"></map-polygon>
-      <map-polygon [options]="polyIslande"></map-polygon>
-      <map-polygon [options]="polyItalie"></map-polygon>
-      <map-polygon [options]="polyLuxembourg"></map-polygon>
-      <map-polygon [options]="polyBelgique"></map-polygon>
-      <map-polygon [options]="polySuisse"></map-polygon>
-      <map-polygon [options]="polyAllemagne"></map-polygon>
+      <span *ngFor="let pays of pays2022">
+        <map-polygon [options]="pays.pays"></map-polygon>
+      </span>
     </google-map>
   </div>
   <div class="information">
